lib/stratiform/res/test/stratiform/corpus/neg/e302-schema-too-many-atoms.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name test-schema extra-atom-here

document
  field foo string
